# dogcatcher-agent

./: .claudecodeignore  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.aws  Dockerfile.scheduled  README-DEV.md  README.md  SECURITY.md  docker-compose.aws-sim.yml  docker-compose.scheduled.yml  docker-compose.teams-test.yml  docker-compose.yml  langgraph.json  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml
agent/: async_processor.py  config.py  config_profiles.py  datadog.py  datadog_async.py  graph.py  healthcheck.py  jira.py  llm_factory.py  metrics.py  nodes.py  performance.py  performance_enhanced.py  run_config.py  state.py  team_config.py  team_loader.py
agent/cache/: __init__.py  base.py  file_cache.py  manager.py  memory_cache.py  redis_cache.py
agent/dedup/: __init__.py  detector.py  result.py  strategies.py
agent/jira/: __init__.py  adf.py  async_client.py  async_match.py  client.py  match.py  payload.py  utils.py
agent/nodes/: __init__.py  analysis.py  analysis_async.py  audit.py  fetch.py  json_sanitizer.py  prompt_context.py  ticket.py  ticket_async.py  ticket_original.py  ticket_refactored.py
agent/utils/: __init__.py  circuit_breaker.py  env_context.py  fallback_analysis.py  logger.py  thread_safe.py
config/: teams.yaml  teams.yaml.example
config/profiles/: development.yaml  production.yaml  staging.yaml  testing.yaml
docs/: README.md  aws-deployment-plan.md  bedrock-migration-plan.md  commands.md  datadog-dashboard-plan.md  implementation-plan.md  implementation-progress.md  improvement-120925.md  patchy.md  phase2-benchmark-results.md  phase2-design.md  phase2-progress.md  progress-config-schema.md  progress-developer-docs.md  progress-test-coverage.md  project-study.md  refactoring-plan-complexity-hotspots.md  review-120925.md  sleuth-agent-plan.md  troubleshooting.md
docs/changelog/: README.md
docs/development/: README.md  architecture.md  jira-integration-review-instructions.md  jira-integration-review-report.md  technical-deep-dive.md
docs/progress/: README.md  progress-logging.md  progress-performance-dx.md  progress-refactor.md  progress-rename-consistency.md
docs/user/: README.md  agent.md  commands.md  patchy.md
infra/aws/: README.md  cloudwatch.tf  ecr.tf  ecs.tf  efs.tf  elasticache.tf  eventbridge.tf  iam.tf  main.tf  outputs.tf  secrets.tf  ssm.tf  terraform.tfvars.example  variables.tf  vpc.tf
patchy/: README.md  __init__.py  patchy_graph.py  patchy_nodes.py  repos.json
patchy/utils/: audit.py  fix_java.py  gh_api.py  git_tools.py
scripts/: entrypoint.sh  run_agent.sh
sleuth/: __init__.py  __main__.py  sleuth_graph.py  sleuth_nodes.py
sleuth/utils/: __init__.py  query_builder.py
tests/: __init__.py  conftest.py
tests/e2e/: test_end_to_end_cap_and_duplicates.py
tests/integration/: test_async_e2e.py
tests/unit/: test_adf.py  test_analysis_circuit_breaker.py  test_async_analysis.py  test_async_datadog.py  test_async_jira_client.py  test_async_processor.py  test_async_ticket.py  test_cache_isolation.py  test_circuit_breaker.py  test_config.py  test_config_profiles.py  test_datadog.py  test_dedup_strategies.py  test_env_context.py  test_graph.py  test_jira_client.py  (+16 more)
tools/: benchmark.py  benchmark_100logs.json  benchmark_50logs.json  benchmark_results_20251209_114804.json  report.py  validate_teams.py
(+6 files in other folders)
